<resources>
    <string name="app_name">Voice Control For Plex Library</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="got_it">Got it</string>
    <string name="stream_video_from_server">Stream video from the server</string>
    <string name="to_the_client">to the Client</string>
    <string name="resume_if_in_progress">Resume if in progress</string>
    <string name="search">Search</string>
    <string name="menu_about">About</string>
    <string name="about_text">Voice Control for Plex\n© 2013 Chris Bellew\nLicensed under GPLv3\n\nPlex is copyright Plex, Inc.</string>
    <string name="menu_donate">Donate</string>
    <string name="feedback_voice">Voice</string>
    <string name="feedback_toast">Toast</string>
    <string name="now_playing_on">Now Playing On</string>
    <string name="voice">Voice</string>
    <string name="toast">Toast</string>
    <string name="scan_all">Scan All</string>
    <string name="not_set">Not Set</string>
    <string name="feedback">Feedback</string>
    <string name="help_server">Select a Plex Media Server to stream from. If you have more than one media server, select &quot;Scan All&quot; to search all available servers for media. If you only have one, you should select it here as scanning all servers each time will take longer to trigger playback.</string>
    <string name="help_client">Select the default client to stream media to. You can easily stream to a different client by ending your search query with \&quot;on &lt;client name&gt;\&quot;, where &lt;client name&gt; is the name of the PHT Client.</string>
    <string name="help_feedback">Select which type of feedback I should give you.</string>
    <string name="help_button_desc">Help Button</string>
    <string name="help_usage">Here are some examples to trigger playback:\n\nWatch V For Vendetta\nWatch Season 1 Episode 1 of Homeland\nWatch Breaking Bad Season 5 Episode 8\nWatch episode Once More With Feeling of Buffy The Vampire Slayer\nWatch the next episode of The Walking Dead\nWatch the latest episode of The Daily Show with Jon Stewart\n\nFor Music:\nListen to the album Drink The Sea by The Glitch Mob\nListen to the album Music Has The Right To Children (Artist is optional. Specify if more than one match is found)\n\nFor playback:\nPause Playback\nResume Playback\nStop Playback\n\nSeeking:\nOffset 1 hour 15 minutes 30 seconds\nOffset 30 minutes 5 seconds\n(Any combination of hours, minutes, and/or seconds, in that order)\n(You may also use \'timecode\' instead of \'offset\')\n\nIf you don\'t have \&quot;Resume if in progress\&quot; checked, you can selectively resume by saying \&quot;Resume watching\&quot; instead of \&quot;Watch\&quot;\n\nYou can also specify a client by adding \&quot;on &lt;client name&gt;\&quot; to your spoken query.</string>
    <string name="help_usage_button">Usage Examples</string>
    <string name="tasker_instructions_header">Missing dependent apps</string>
    <string name="tasker_instructions">The preferred method of using Voice Control for Plex is with either utter! or AutoVoice, in combination with Tasker. Use the buttons below to visit the respective applications in the Google Play Store.</string>
    <string name="tasker_import_header">Voice Control For Plex works with either utter! or AutoVoice. Use the button below to import the Tasker project to enable this functionality.</string>
    <string name="install_tasker">Install Tasker</string>
    <string name="install_utter">Install utter!</string>
    <string name="install_autovoice">Install AutoVoice</string>
    <string name="import_tasker_project">Import Tasker Project</string>
    <string name="import_tasker_instructions">Tasker Project imported. I will now open Tasker. Please tap on the Home Icon->Import, then select Voice Control for Plex.\n\nIf you plan to use utter!, you MUST go to utter! Settings&#8209;>Advanced&#8209;>Try Again&#8209;>Select \"Send to Tasker\".</string>
    <string name="select_voice">Select Voice</string>
    <string name="cancel">Cancel</string>
    <string name="nothing_to_play">Sorry, I couldn\'t find anything to play.</string>
    <string name="http_status_code_error">Sorry, but I got an error, HTTP status code: %d</string>
    <string name="got_error">Sorry, but I got an error: %s</string>
    <string name="client_not_found">Sorry, you didn\'t specify a client in the main settings, or I couldn\'t find it.</string>
    <string name="found_more_than_one_album">I found more than one matching album. Please specify artist.</string>
    <string name="couldnt_find_album">Sorry, I couldn\'t find an album to play.</string>
    <string name="couldnt_find_track">Sorry, I couldn\'t find a track to play.</string>
    <string name="couldnt_find_episode">Sorry, I couldn\'t find the episode you specified.</string>
    <string name="found_more_than_one_show">Sorry, I found more than one matching show. Please be more specific.</string>
    <string name="couldnt_find">Sorry, I couldn\'t find %s.</string>
    <string name="couldnt_find_season">Sorry, I couldn\'t find that season.</string>
    <string name="found_more_than_one_movie">I found more than one matching movie. Please be more specific.</string>
    <string name="now_watching_video">Now watching %1$s on %2$s.</string>
    <string name="playback_paused">Playback paused.</string>
    <string name="playback_resumed">Playback resumed.</string>
    <string name="playback_stopped">Playback stopped.</string>
</resources>
